--- a/hopguides-web/public/assets/css/Login-Form-Clean.css
+++ b/hopguides-web/public/assets/css/Login-Form-Clean.css
@@ -7,6 +7,15 @@
   z-index:-1;
 }
 
+.login-page2 {
+
+  max-width: 400px;
+  padding: 3% 0 0;
+  margin: auto;
+  z-index:-1;
+}
+
+
 .form {
   position: relative;
   z-index: 1;
