--- a/hopguides-web/src/App.css
+++ b/hopguides-web/src/App.css
@@ -12,7 +12,10 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+#inputID::placeholder {
+  color: #ff0000;
+  opacity: 1;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +38,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+hr.solid {
+  border-top: 1px solid #ddd;
+}
+
+html, body, #root, .App {
+  height: 100%;
 }
